--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,12 +6,18 @@ driver:
 
 provisioner:
   name: chef_zero
+  chef_license: accept
+
+verifier:
+  name: inspec
 
 platforms:
-  - name: ubuntu-12.04
-  - name: ubuntu-14.04
-  - name: debian-7
-  - name: debian-8
+  - name: ubuntu-16.04
+    run_list:
+      - recipe[locales]
+  - name: ubuntu-18.04
+  - name: debian-9
+  - name: debian-10
 
 suites:
   - name: butterfly
@@ -21,9 +27,6 @@ suites:
       - recipe[butterfly]
       - recipe[butterfly::libsass]
   - name: butterfly-service
-    excludes:
-      - ubuntu-12.04
-      - debian-7
     run_list:
       - recipe[apt]
       - recipe[build-essential]
