--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -32,3 +32,8 @@ suites:
       - recipe[build-essential]
       - recipe[butterfly]
       - recipe[butterfly::systemd]
+    excludes:
+      - debian-9
+      - debian-10
+      - ubuntu-16.04
+      - ubuntu-18.04
